<resources>
    <string name="app_name">instagram</string>
    <string name="title_activity_listagem">listagem</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Digite seu usuário</string>
    <string name="prompt_password">Digite sua senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="registrar">Não tem cadastro? Registre aqui.</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="error_invalid_email">Esse usuário é inválido</string>
    <string name="error_invalid_password">A senha deve conter mais de 4 dígitos</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="novo_usuario">Digite o e-mail</string>
    <string name="nova_senha">Digite a senha</string>
    <string name="nova_senha2">Digite novamente a senha</string>
    <string name="novo_registrar">Cadastrar</string>

    <string name="share">Compartilhar</string>

    <string name="config">Configurações</string>
    <string name="exit">Sair</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
